tests/fail/nightly/raw_string.stderr
error: more placeholders than types provided
 --> tests/fail/nightly/raw_string.rs:2:32
  |
2 |     sscanf::scanf!("hi", r"asdf{}asdf");
  |                                ^^

error: radix options 'x', 'o', 'b' cannot be followed by anything.
       Hint: If this was meant to be a regex option, surround it with '/'
 --> tests/fail/nightly/raw_string.rs:3:35
  |
3 |     sscanf::scanf!("hi", r"asdf{:bob}asdf", usize);
  |                                   ^^

error: radix options 'x', 'o', 'b' cannot be followed by anything.
       Hint: If this was meant to be a regex option, surround it with '/'
 --> tests/fail/nightly/raw_string.rs:4:40
  |
4 |     sscanf::scanf!("hi", r"asdf{usize:bob}asdf");
  |                                        ^^

error: more placeholders than types provided
 --> tests/fail/nightly/raw_string.rs:5:34
  |
5 |     sscanf::scanf!("hi", r##"asdf{}asdf"##);
  |                                  ^^

error: radix options 'x', 'o', 'b' cannot be followed by anything.
       Hint: If this was meant to be a regex option, surround it with '/'
 --> tests/fail/nightly/raw_string.rs:6:37
  |
6 |     sscanf::scanf!("hi", r##"asdf{:bob}asdf"##, usize);
  |                                     ^^

error: radix options 'x', 'o', 'b' cannot be followed by anything.
       Hint: If this was meant to be a regex option, surround it with '/'
 --> tests/fail/nightly/raw_string.rs:7:42
  |
7 |     sscanf::scanf!("hi", r##"asdf{usize:bob}asdf"##);
  |                                          ^^
